--- a/apps/system/locales/system.en-US.properties
+++ b/apps/system/locales/system.en-US.properties
@@ -473,6 +473,11 @@ payment-flow=Purchase
 
 # Remote Debugger Connection Dialog
 remoteDebuggerMessage=An incoming request to permit remote debugging connection was detected. Allow connection?
+remoteDebuggerPromptUSB=An incoming request to permit USB debugging connection was detected. Allow connection?
+remoteDebuggerPromptTCP=An incoming request to permit remote debugging connection was detected from {{host}}:{{port}}. Allow connection?
+
+# DevTools Authentication
+devtools-auth-scan=Scan the QR code from your other device
 
 # fullscreen permission
 # LOCALIZATION NOTE {{origin}} is the origin of the site which has requested fullscreen, e.g. http://example.com is now fullscreen. It includes protocol + hostname.
