Bug 925761 - Geolocation controls in developer menu.

--- a/apps/settings/locales/settings.en-US.properties
+++ b/apps/settings/locales/settings.en-US.properties
@@ -982,6 +982,8 @@ devSettings=Developer Settings
 debug=Debug
 developer-menu=Developer Menu
 developer-tools=Developer Tools
+spoofing=Spoofing
+spoof-position=Spoof position
 graphics=Graphics
 hardware-composer=Hardware composer
 paint-flashing=Flash repainted area
